--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/Logo Clim Passion 2025 Ventilateur.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Interface Nexus Clim - Simulateur de missions</title>
+
+    <title>Nexus Clim - Plateforme de Gestion d'Interventions Climatisation</title>
+    <meta name="description" content="Nexus Clim : plateforme complète de gestion des interventions, planning, missions et sous-traitance pour professionnels de la climatisation et du génie climatique." />
+    <meta name="keywords" content="climatisation, interventions, planning, missions, sous-traitance, génie climatique, SAV, maintenance" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Nexus Clim - Plateforme de Gestion d'Interventions" />
+    <meta property="og:description" content="Solution professionnelle de gestion des interventions pour les professionnels de la climatisation" />
+    <meta property="og:image" content="https://nexus-clim.netlify.app/Logo Clim Passion 2025 Ventilateur.png" />
+    <meta property="og:url" content="https://nexus-clim.netlify.app" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Nexus Clim - Plateforme de Gestion d'Interventions" />
+    <meta name="twitter:description" content="Solution professionnelle de gestion des interventions pour les professionnels de la climatisation" />
+    <meta name="twitter:image" content="https://nexus-clim.netlify.app/Logo Clim Passion 2025 Ventilateur.png" />
+
+    <meta name="theme-color" content="#0ea5e9" />
+    <meta name="author" content="Clim Passion" />
   </head>
   <body>
     <div id="root"></div>
